error mechanism for unfound page redirecting back to landing, createGame function finished

--- a/templates/css.ejs
+++ b/templates/css.ejs
@@ -9,7 +9,8 @@ ul  {
 }
 
 .content    {
-    padding: 0px 0px 0px 40px;
+    padding: 0px 40px 0px 40px;
+    text-align: center;
 }
 .wrapper    {
     background-color: rgba(100, 149, 237, 0.2);
