--- a/templates/player.ejs
+++ b/templates/player.ejs
@@ -11,7 +11,10 @@
                 <%- include headerhtml.ejs %>
             </div>
             <div class="content">
-                Welcome to the Player Page!
+                Welcome to the Player Page! <br>
+                Welcome to <%- givenName %>! <br>
+                The key words for this game are <%- spokenID %> <br>
+                And here is where I will put all the inputs and buttons ...
             </div>
         </div>  <!-- end of wrapper -->
 
