moved two for-loops to one helper function, fighting cookie setting and recognition

--- a/templates/owner.ejs
+++ b/templates/owner.ejs
@@ -11,7 +11,13 @@
                 <%- include headerhtml.ejs %>
             </div>
             <div class="content">
-                Welcome to the Owner Page!
+                Welcome to the Owner Page! <br>
+                This game is named <%- givenName %>! <br>
+                The key words for this game are <%- spokenID %> <br>
+<hr>
+                And here is where I will put all the controls and stuff ...
+
+
             </div>
         </div>  <!-- end of wrapper -->
 
