--- a/templates/player.ejs
+++ b/templates/player.ejs
@@ -14,15 +14,31 @@
                 Welcome to the Player Page! <br>
                 Welcome to <%- givenName %>! <br>
                 The key words for this game are <%- spokenID %> <br>
-                And here is where I will put all the inputs and buttons ...
+                <hr>
+                <ul id="messageboard"></ul>
+                <form action="">
+                    <input id="m" autocomplete="off" />
+                    <button>Send</button>
             </div>
         </div>  <!-- end of wrapper -->
 
         <script src="http://code.jquery.com/jquery-latest.min.js"> </script>
         <script type="text/javascript"> <%- include jrumble.ejs %> </script>
         <script type="text/javascript"> <%- include headerjs.ejs %> </script>
-        <script>
 
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+            $('form').submit(function(){
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+            socket.on('chat message', function(msg){
+                $('#messageboard').append($('<li>').text(msg));
+            });
         </script>
+
+
     </body>
 </html>
