--- a/templates/owner.ejs
+++ b/templates/owner.ejs
@@ -15,10 +15,27 @@
                 This game is named <%- givenName %>! <br>
                 The key words for this game are <%- spokenID %> <br>
                 <hr>
-                <ul id="messageboard"></ul>
-                <form action="">
-                    <input id="m" autocomplete="off" />
-                    <button>Send</button>
+
+                <fieldset>
+                    <legend>owner controls</legend>
+                    <form id="resetButton">
+                        <button>Reset</button>
+                    </form>
+                </fieldset>
+
+                <fieldset>
+                    <legend>gameboard</legend>
+                    <ul id="gameboard"></ul>
+                </fieldset>
+
+                <fieldset>
+                    <legend>chatboard</legend>
+                    <ul id="chatboard"></ul>
+                    <form id="chatBox" action="">
+                        <input id="chatInput" autocomplete="off" />
+                        <button>Send</button>
+                    </form>
+                </fieldset>
             </div>
         </div>  <!-- end of wrapper -->
 
@@ -27,18 +44,7 @@
         <script type="text/javascript"> <%- include headerjs.ejs %> </script>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            /*var socket = io('/my-namespace');*/
-            var socket = io('/<%- gameID %>');
-            $('form').submit(function(){
-                socket.emit('chat message', $('#m').val());
-                $('#m').val('');
-                return false;
-            });
-            socket.on('chat message', function(msg){
-                $('#messageboard').append($('<li>').text(msg));
-            });
-        </script>
+        <script type="text/javascript"> <%- include gameplay.ejs %> </script>
 
 
 
